--- a/src/app/esgithub/coding-page/coding-page.component.html
+++ b/src/app/esgithub/coding-page/coding-page.component.html
@@ -1,100 +1,110 @@
-<div class="relative top-12">
-  <div
-    class="flex flex-col w-[90%] relative left-[5%] border p-4 rounded-lg border-gray-300 bg-gray-200"
-  >
-    <div class="flex justify-between mb-2">
-      <div class="relative top-8">
-        <input
-          type="file"
-          #fileInput
-          style="display: none"
-          (change)="onFileSelected($event)"
-          accept=".py,.js"
-        />
-
-        <button
-          class="bg-black text-white font-bold py-1 px-4 rounded"
-          (click)="fileInput.click()"
-        >
-          <mat-icon>file_upload</mat-icon>
-          <span class="relative p-2 bottom-1.5 italic">Upload from file</span>
-        </button>
-        <button class="bg-black text-white font-bold py-1 px-4 rounded ml-2">
-          <mat-icon>share</mat-icon>
-          <span class="relative p-2 bottom-1.5 italic">Share</span>
-        </button>
-      </div>
-
-      <div class="relative top-4 flex">
-        <img
-          *ngIf="selectedLanguage === 'python'"
-          src="assets/images/icons/python-svgrepo-com.svg"
-          style="height: 50px; width: 50px"
-        />
-        <img
-          *ngIf="selectedLanguage === 'javascript'"
-          src="assets/images/icons/javascript-svgrepo-com.svg"
-          style="height: 50px; width: 50px"
-        />
-        <mat-form-field appearance="fill" class="ml-2">
-          <mat-label>Select a language</mat-label>
-          <mat-select
-            [(ngModel)]="selectedLanguage"
-            (selectionChange)="onSelectedLanguageUpdate()"
-          >
-            <mat-option [value]="'python'">
-              <div class="icon-with-text">
-                <img
-                  src="assets/images/icons/python-svgrepo-com.svg"
-                  style="height: 20px; width: 20px; margin-left: 15px"
-                />
-                Python
-              </div>
-            </mat-option>
-            <mat-option [value]="'javascript'">
-              <div class="icon-with-text">
-                <img
-                  src="assets/images/icons/javascript-svgrepo-com.svg"
-                  style="height: 20px; width: 20px; margin-left: 15px"
-                />
-                Javascript
-              </div>
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-    </div>
-
-    <div class="mb-1">
-      <div #editor style="height: 400px; width: 100%; border-radius: 10px"></div>
-    </div>
+<div class="flex h-screen bg-gray-100">
+  <div class="z-50">
+    <app-side-navbar></app-side-navbar>
   </div>
 
-  <button
-    class="mt-4 relative left-[5%] bg-black text-white font-bold py-1 px-4 rounded"
-    (click)="onRunCodeClick()"
-  >
-    <mat-icon>play_arrow</mat-icon>
-    <span class="relative p-2 bottom-1.5 italic">Run code</span>
-  </button>
+  <div class="overflow-auto w-full">
+    <div class="relative top-12 w-full">
+      <div
+        class="flex flex-col w-[90%] relative left-[5%] border p-4 rounded-lg border-gray-300 bg-gray-200"
+      >
+        <div class="flex justify-between mb-2">
+          <div class="relative top-8">
+            <input
+              type="file"
+              #fileInput
+              style="display: none"
+              (change)="onFileSelected($event)"
+              accept=".py,.js"
+            />
 
-  <div
-    class="flex flex-col w-[90%] mt-1 relative left-[5%] border p-8 border-gray-300 bg-gray-200 rounded-lg"
-  >
-    <mat-progress-bar *ngIf="isLoading" mode="indeterminate"></mat-progress-bar>
-    <textarea
-      disabled
-      *ngIf="codeOutput && codeOutput.status === 0"
-      class="h-48 max-h-96 overflow-y-auto"
-    >
+            <button
+              class="bg-black text-white font-bold py-1 px-4 rounded"
+              (click)="fileInput.click()"
+            >
+              <mat-icon>file_upload</mat-icon>
+              <span class="relative p-2 bottom-1.5 italic">Upload from file</span>
+            </button>
+            <button class="bg-black text-white font-bold py-1 px-4 rounded ml-2">
+              <mat-icon>share</mat-icon>
+              <span class="relative p-2 bottom-1.5 italic">Share</span>
+            </button>
+          </div>
+
+          <div class="relative top-4 flex">
+            <img
+              *ngIf="selectedLanguage === 'python'"
+              src="assets/images/icons/python-svgrepo-com.svg"
+              style="height: 50px; width: 50px"
+            />
+            <img
+              *ngIf="selectedLanguage === 'javascript'"
+              src="assets/images/icons/javascript-svgrepo-com.svg"
+              style="height: 50px; width: 50px"
+            />
+            <mat-form-field appearance="fill" class="ml-2">
+              <mat-label>Select a language</mat-label>
+              <mat-select
+                [(ngModel)]="selectedLanguage"
+                (selectionChange)="onSelectedLanguageUpdate()"
+              >
+                <mat-option [value]="'python'">
+                  <div class="icon-with-text">
+                    <img
+                      src="assets/images/icons/python-svgrepo-com.svg"
+                      style="height: 20px; width: 20px; margin-left: 15px"
+                    />
+                    Python
+                  </div>
+                </mat-option>
+                <mat-option [value]="'javascript'">
+                  <div class="icon-with-text">
+                    <img
+                      src="assets/images/icons/javascript-svgrepo-com.svg"
+                      style="height: 20px; width: 20px; margin-left: 15px"
+                    />
+                    Javascript
+                  </div>
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+        </div>
+
+        <div class="mb-1">
+          <div #editor style="height: 400px; width: 100%; border-radius: 10px"></div>
+        </div>
+      </div>
+
+      <button
+        class="mt-4 relative left-[5%] bg-black text-white font-bold py-1 px-4 rounded"
+        (click)="onRunCodeClick()"
+      >
+        <mat-icon>play_arrow</mat-icon>
+        <span class="relative p-2 bottom-1.5 italic">Run code</span>
+      </button>
+
+      <div
+        class="flex flex-col w-[90%] mt-1 relative left-[5%] border p-8 border-gray-300 bg-gray-200 rounded-lg"
+      >
+        <mat-progress-bar *ngIf="isLoading" mode="indeterminate"></mat-progress-bar>
+        <textarea
+          disabled
+          *ngIf="codeOutput && codeOutput.status === 0"
+          class="h-48 max-h-96 overflow-y-auto"
+        >
       {{ codeOutput.output }}
-    </textarea>
-    <textarea
-      disabled
-      *ngIf="codeOutput && codeOutput.status !== 0"
-      class="h-48 max-h-96 overflow-y-auto text-red-600"
-    >
+    </textarea
+        >
+        <textarea
+          disabled
+          *ngIf="codeOutput && codeOutput.status !== 0"
+          class="h-48 max-h-96 overflow-y-auto text-red-600"
+        >
       {{ codeOutput.output }}
-    </textarea>
+    </textarea
+        >
+      </div>
+    </div>
   </div>
 </div>
