--- a/src/app/esgithub/coding-page/coding-page.component.html
+++ b/src/app/esgithub/coding-page/coding-page.component.html
@@ -90,7 +90,11 @@
       <div
         class="flex flex-col w-[90%] mt-1 relative left-[5%] border p-8 border-gray-300 bg-gray-200 rounded-lg"
       >
-        <mat-progress-bar *ngIf="isLoading" mode="indeterminate"></mat-progress-bar>
+        <mat-progress-bar
+          mode="indeterminate"
+          color="accent"
+          *ngIf="isLoading"
+        ></mat-progress-bar>
         <textarea
           disabled
           *ngIf="codeOutput && codeOutput.status === 0"
