--- a/src/app/esgithub/home-page/home-page.component.html
+++ b/src/app/esgithub/home-page/home-page.component.html
@@ -5,7 +5,15 @@
 
   <div class="overflow-auto w-full">
     <div class="relative top-12 w-full">
-      <!-- page content goes here later !-->
+      <div *ngFor="let program of programsList$ | async" class="mb-4 w-full">
+        <app-program-item-list
+          [description]="program.description"
+          [sourceCode]="program.sourceCode"
+          [programmingLanguage]="program.programmingLanguage"
+          [inputTypes]="program.inputTypes"
+          [outputTypes]="program.outputTypes"
+        ></app-program-item-list>
+      </div>
     </div>
   </div>
 </div>
