--- a/src/app/core/Auth/login/login.component.html
+++ b/src/app/core/Auth/login/login.component.html
@@ -1,23 +1,25 @@
-<div class="w-[466px]">
-  <p class="text-[#E2E2E2]">Email:</p>
-  <mat-form-field appearance="outline" class="w-[100%]">
-    <input
-      matInput
-      [formControl]="emailFormControl"
-      placeholder="ex: bouraz@..."
-      required
-    />
-  </mat-form-field>
-</div>
+<div *ngIf="isLogin">
+  <div class="w-[466px]">
+    <p class="text-[#E2E2E2]">Email:</p>
+    <mat-form-field appearance="outline" class="w-[100%]">
+      <input
+        matInput
+        [formControl]="emailFormControl"
+        placeholder="ex: bouraz@..."
+        required
+      />
+    </mat-form-field>
+  </div>
 
-<div class="w-[466px]">
-  <p class="text-[#E2E2E2]">Password:</p>
-  <mat-form-field appearance="outline" class="w-[100%]">
-    <input
-      matInput
-      [formControl]="passwordFormControl"
-      placeholder="************"
-      required
-    />
-  </mat-form-field>
+  <div class="w-[466px]">
+    <p class="text-[#E2E2E2]">Password:</p>
+    <mat-form-field appearance="outline" class="w-[100%]">
+      <input
+        matInput
+        [formControl]="passwordFormControl"
+        placeholder="************"
+        required
+      />
+    </mat-form-field>
+  </div>
 </div>
