refactor publishing articls with user auth

--- a/src/app/core/Auth/login/login.component.html
+++ b/src/app/core/Auth/login/login.component.html
@@ -19,6 +19,7 @@
         [formControl]="passwordFormControl"
         placeholder="************"
         required
+        type="password"
       />
     </mat-form-field>
   </div>
