--- a/src/app/esgithub/home-page/home-page.component.html
+++ b/src/app/esgithub/home-page/home-page.component.html
@@ -7,11 +7,13 @@
     <div class="relative top-12 w-full">
       <div *ngFor="let program of programsList$ | async" class="mb-4 w-full">
         <app-program-item-list
+          *ngIf="(userData$ | async)?.userId !== program.user.userId"
           [description]="program.description"
           [sourceCode]="program.sourceCode"
           [programmingLanguage]="program.programmingLanguage"
           [inputTypes]="program.inputTypes"
           [outputTypes]="program.outputTypes"
+          [user]="program.user"
         ></app-program-item-list>
       </div>
     </div>
