--- a/src/app/core/components/side-navbar/side-navbar.component.html
+++ b/src/app/core/components/side-navbar/side-navbar.component.html
@@ -1,7 +1,7 @@
 <section class="flex gap-6">
   <div
     [ngClass]="{ 'w-72': open, 'w-16': !open }"
-    class="bg-gray-700 min-h-screen duration-500 text-gray-100 px-4"
+    class="bg-[#313234] min-h-screen duration-500 text-gray-100 px-4"
   >
     <div class="py-3 flex justify-end mt-5">
       <button class="hidden sm:inline-block" (click)="toggleOpen()">
