--- a/src/app/esgithub/coding-page/coding-page.component.html
+++ b/src/app/esgithub/coding-page/coding-page.component.html
@@ -6,7 +6,7 @@
   <div class="overflow-auto w-full">
     <div class="relative top-12 w-full">
       <div
-        class="flex flex-col w-[90%] relative left-[5%] border p-4 rounded-lg border-gray-300 bg-gray-200"
+        class="flex flex-col w-[90%] relative left-[5%] border p-4 rounded-lg border-gray-300 bg-[#424244]"
       >
         <div class="flex justify-between mb-2">
           <div class="relative top-8">
@@ -88,7 +88,7 @@
       </button>
 
       <div
-        class="flex flex-col w-[90%] mt-1 relative left-[5%] border p-8 border-gray-300 bg-gray-200 rounded-lg"
+        class="flex flex-col w-[90%] mt-1 relative left-[5%] border p-8 border-gray-300 bg-[#424244] rounded-lg"
       >
         <mat-progress-bar
           mode="indeterminate"
