--- a/src/app/esgithub/home-page/program-item-list/program-item-list.component.html
+++ b/src/app/esgithub/home-page/program-item-list/program-item-list.component.html
@@ -1,4 +1,4 @@
-<div class="bg-gray-800 p-4 rounded-lg w-[80%] mx-auto text-white">
+<div class="bg-[#424244] p-4 rounded-lg w-[90%] mx-auto text-white">
   <div class="flex items-center justify-between mb-2">
     <div class="flex items-center">
       <img
