--- a/src/app/core/components/side-navbar/side-navbar.component.html
+++ b/src/app/core/components/side-navbar/side-navbar.component.html
@@ -43,6 +43,7 @@
     </div>
     <div class="mt-4 flex flex-col gap-4 relative mt-24">
       <a
+        (click)="onLogoutClick()"
         class="group flex items-center text-sm gap-3.5 font-medium p-2 hover:bg-gray-800 rounded-md py-4"
       >
         <div style="margin-top: -17px"><mat-icon>logout</mat-icon></div>
