--- a/src/app/esgithub/profile/profile.component.html
+++ b/src/app/esgithub/profile/profile.component.html
@@ -6,10 +6,9 @@
   <div class="overflow-auto w-full">
     <div class="relative top-8 w-full">
       <div class="flex flex-col w-[90%] relative left-[5%]">
-        <!-- Main container for 1/4 and 3/4 width divs -->
         <div class="flex w-full">
           <div class="w-1/4 overflow-hidden">
-            <aside>
+            <aside class="fixed w-1/6">
               <section class="bg-[#424244] p-4 rounded-lg shadow-md mb-4">
                 <div class="h-60 flex justify-center items-center">
                   <img
@@ -19,12 +18,20 @@
                     alt="Profile Image"
                   />
                   <img
-                    *ngIf="(userData$ | async)?.avatarUrl !== null"
-                    [src]="(userData$ | async)?.avatarUrl"
+                    *ngIf="(userData$ | async)?.avatarUrl"
+                    [src]="'http://' + (userData$ | async)?.avatarUrl"
                     class="w-full h-full object-cover rounded-md"
                   />
                 </div>
+                <input
+                  type="file"
+                  #fileInput
+                  (change)="onFileSelected($event)"
+                  accept="image/*"
+                  hidden
+                />
                 <button
+                  (click)="fileInput.click()"
                   class="border-2 border-black w-full rounded-lg text-white text-md bg-black p-2 block mx-auto mt-2"
                 >
                   Edit profile image
@@ -65,28 +72,36 @@
             <div class="bg-[#424244] w-full flex flex-row rounded-md">
               <div
                 class="p-4 text-white cursor-pointer w-1/3 flex justify-center items-center rounded-md"
-                [ngClass]="{ 'text-white bg-black': selectedMenuItem === 'programs' }"
+                [ngClass]="{
+                  'text-white bg-black italic font-bold': selectedMenuItem === 'programs'
+                }"
                 (click)="onMenuItemClick('programs')"
               >
                 Programs
               </div>
               <div
                 class="p-4 text-white cursor-pointer w-1/3 flex justify-center items-center rounded-md"
-                [ngClass]="{ 'text-white bg-black': selectedMenuItem === 'followers' }"
+                [ngClass]="{
+                  'italic font-bold text-white bg-black': selectedMenuItem === 'followers'
+                }"
                 (click)="onMenuItemClick('followers')"
               >
                 Followers
               </div>
               <div
                 class="p-4 text-white cursor-pointer w-1/3 flex justify-center items-center rounded-md"
-                [ngClass]="{ 'text-white bg-black': selectedMenuItem === 'following' }"
+                [ngClass]="{
+                  'text-white bg-black italic font-bold': selectedMenuItem === 'following'
+                }"
                 (click)="onMenuItemClick('following')"
               >
                 Following
               </div>
               <div
                 class="p-4 text-white cursor-pointer w-1/4 flex justify-center items-center rounded-md"
-                [ngClass]="{ 'text-white bg-black': selectedMenuItem === 'edit' }"
+                [ngClass]="{
+                  'text-white bg-black italic font-bold': selectedMenuItem === 'edit'
+                }"
                 (click)="onMenuItemClick('edit')"
               >
                 Edit
@@ -104,7 +119,9 @@
 
             <div *ngIf="selectedMenuItem === 'following'">list of following here</div>
 
-            <div *ngIf="selectedMenuItem === 'edit'">edit view here</div>
+            <div *ngIf="selectedMenuItem === 'edit'">
+              <app-edit-profile (profileUpdated)="onProfileUpdated()"></app-edit-profile>
+            </div>
           </div>
         </div>
       </div>
