visiting other users profile && update views

--- a/src/app/esgithub/home-page/home-page.component.html
+++ b/src/app/esgithub/home-page/home-page.component.html
@@ -16,6 +16,7 @@
           [inputTypes]="program.inputTypes"
           [outputTypes]="program.outputTypes"
           [user]="program.user"
+          [homePage]="true"
         ></app-program-item-list>
       </div>
     </div>
