--- a/src/app/esgithub/profile/user-programs/user-programs.component.html
+++ b/src/app/esgithub/profile/user-programs/user-programs.component.html
@@ -6,7 +6,8 @@
     [inputTypes]="program.inputTypes"
     [outputTypes]="program.outputTypes"
     [user]="program.user"
-    [isOwner]="true"
+    [isOwner]="profileOwner"
     [visibility]="program.visibility"
+    [homePage]="false"
   ></app-program-item-list>
 </div>
