--- a/src/app/esgithub/home-page/home-page.component.html
+++ b/src/app/esgithub/home-page/home-page.component.html
@@ -3,13 +3,11 @@
     <app-side-navbar></app-side-navbar>
   </div>
 
-  <div class="overflow-auto w-full relative">
-    <div class="absolute inset-0 flex justify-center items-center" *ngIf="isLoading">
-      <mat-spinner color="accent"></mat-spinner>
-    </div>
-    <div class="relative top-8 w-full">
-      <div *ngFor="let program of programsList$ | async" class="mb-4 w-full">
+  <div class="w-full">
+    <ng-container *ngFor="let program of programsList$ | async">
+      <div class="flex">
         <app-program-item-list
+          class="w-full"
           [description]="program.description"
           [sourceCode]="program.sourceCode"
           [programmingLanguage]="program.programmingLanguage"
@@ -18,7 +16,11 @@
           [user]="program.user"
           [homePage]="true"
         ></app-program-item-list>
+        <app-side-profile
+          *ngIf="userData$ | async as currentUser"
+          [currentUser]="currentUser"
+        ></app-side-profile>
       </div>
-    </div>
+    </ng-container>
   </div>
 </div>
