--- a/src/app/esgithub/home-page/program-item-list/program-item-list.component.html
+++ b/src/app/esgithub/home-page/program-item-list/program-item-list.component.html
@@ -1,5 +1,5 @@
 <div
-  class="bg-[#424244] p-4 rounded-lg w-[90%] mx-auto text-white"
+  class="bg-[#424244] p-4 rounded-lg w-[90%] mx-auto text-white mb-10 mt-10"
   [ngClass]="{ 'w-full': homePage === false }"
 >
   <div
