maybe image url fixxed

--- a/src/app/esgithub/side-profile/side-profile.component.html
+++ b/src/app/esgithub/side-profile/side-profile.component.html
@@ -3,7 +3,7 @@
     <img
       class="w-[170px] h-[170px] rounded-full object-cover mb-3 mt-3"
       [src]="
-        currentUser.avatarUrl ? 'localhost://' + currentUser.avatarUrl : anonymousImageUrl
+        currentUser.avatarUrl ? 'http://' + currentUser.avatarUrl : anonymousImageUrl
       "
     />
     <a [routerLink]="'/profile/' + currentUser.userId" class="text-white"
