--- a/src/app/esgithub/home-page/home-page.component.html
+++ b/src/app/esgithub/home-page/home-page.component.html
@@ -14,6 +14,7 @@
         [outputTypes]="program.outputTypes"
         [user]="program.user"
         [homePage]="true"
+        [programId]="program.programId"
       ></app-program-item-list>
     </div>
     <div>
