fixing image link

--- a/src/app/esgithub/side-profile/follower-following/follower-following.component.html
+++ b/src/app/esgithub/side-profile/follower-following/follower-following.component.html
@@ -4,7 +4,7 @@
 >
   <img
     class="w-[54px] h-[54px] rounded-full object-cover me-5"
-    [src]="followerOrFollowingPicture ?? anonymousImageUrl"
+    [src]="'http://' + followerOrFollowingPicture ?? anonymousImageUrl"
   />
 
   <div>
