--- a/src/app/core/modals/line-comments-modal/line-comments-modal.component.html
+++ b/src/app/core/modals/line-comments-modal/line-comments-modal.component.html
@@ -1,6 +1,13 @@
 <div class="flex h-[700px] bg-[#3B3D5E] flex-col">
   <div
-    class="flex left-[5%] flex-col mt-8 w-[90%] relative rounded-lg overflow-y-auto h-[85%] mb-4"
+    class="p-4 absolute font-bold top-[0%] right-[0%] text-red-700 text-5xl cursor-pointer"
+    (click)="onCloseBtnClick()"
+  >
+    <i class="material-icons">close</i>
+  </div>
+
+  <div
+    class="mt-5 flex left-[5%] flex-col mt-8 w-[90%] relative rounded-lg overflow-y-auto h-[85%] mb-4"
   >
     <ng-container *ngFor="let comment of programComments">
       <div class="second py-2 px-2 bg-[#1E1F3D] mb-4">
