--- a/src/app/esgithub/groups/groups.component.html
+++ b/src/app/esgithub/groups/groups.component.html
@@ -33,12 +33,15 @@
         <div class="slider overflow-x-auto py-2 items overflow-y-hidden">
           <div class="flex flex-row space-x-20 items-slide">
             <ng-container *ngFor="let group of recentGroupsList$ | async">
-              <div class="flex-none w-80 h-80">
+              <div class="flex-none w-80 h-80" (click)="onGroupClick(group.groupId)">
                 <app-group-list-item [group]="group"></app-group-list-item>
               </div>
             </ng-container>
             <ng-container *ngFor="let group of recentGroupsList$ | async">
-              <div class="flex-none w-80 h-80 cursor-pointer">
+              <div
+                class="flex-none w-80 h-80 cursor-pointer"
+                (click)="onGroupClick(group.groupId)"
+              >
                 <app-group-list-item [group]="group"></app-group-list-item>
               </div>
             </ng-container>
@@ -52,7 +55,10 @@
         </div>
         <div class="grid grid-cols-3 gap-4">
           <ng-container *ngFor="let group of groupsList$ | async">
-            <div class="flex-none w-80 h-80 cursor-pointer">
+            <div
+              class="flex-none w-80 h-80 cursor-pointer"
+              (click)="onGroupClick(group.groupId)"
+            >
               <app-group-list-item [group]="group"></app-group-list-item>
             </div>
           </ng-container>
