refactor homePage and adding programs filter

--- a/src/app/esgithub/home-page/home-page.component.html
+++ b/src/app/esgithub/home-page/home-page.component.html
@@ -3,25 +3,82 @@
     <app-side-navbar></app-side-navbar>
   </div>
 
-  <div class="w-full flex justify-between">
-    <div class="w-full h-[100vh] overflow-auto">
+  <div class="w-full h-[100vh] overflow-hidden bg-[#1E1F3D]">
+    <div
+      class="p-4 bg-white opacity-20 shadow-md w-full flex justify-center items-center"
+    >
+      <div class="flex flex-row items-center gap-4">
+        <div class="flex items-center gap-2">
+          <div class="flex flex-row mr-2 z-10">
+            <input type="checkbox" value="python" (change)="onLanguageChange($event)" />
+            <label class="flex items-center p-1 bg-white text-purple-500 italic font-bold"
+              >Python</label
+            >
+          </div>
+          <div class="flex flex-row mr-2">
+            <input
+              type="checkbox"
+              value="javascript"
+              class="p-1 bg-red-700"
+              (change)="onLanguageChange($event)"
+            />
+            <label class="flex items-center p-1 bg-white text-purple-500 italic font-bold"
+              >JavaScript</label
+            >
+          </div>
+          <div class="flex flex-row mr-2">
+            <input
+              type="checkbox"
+              value="c++"
+              class="p-1 bg-red-700"
+              (change)="onLanguageChange($event)"
+            />
+            <label class="flex items-center p-1 bg-white text-purple-500 italic font-bold"
+              >C++</label
+            >
+          </div>
+          <div class="flex flex-row mr-2">
+            <input
+              type="checkbox"
+              value="php"
+              class="p-1 bg-red-700"
+              (change)="onLanguageChange($event)"
+            />
+            <label class="flex items-center p-1 bg-white text-purple-500 italic font-bold"
+              >PHP</label
+            >
+          </div>
+        </div>
+        <div class="relative">
+          <input
+            type="text"
+            placeholder="Search..."
+            class="border p-2 rounded pl-10 border-purple-500 text-black"
+            (input)="onSearchChange($event)"
+          />
+          <span class="material-icons absolute left-2 top-2 text-black cursor-pointer"
+            >search</span
+          >
+        </div>
+      </div>
+    </div>
+    <div
+      class="m-10 grid grid-cols-1 md:grid-cols-2 gap-4 overflow-auto relative h-[90%]"
+    >
       <app-program-item-list
         *ngFor="let program of programsList$ | async"
-        [description]="program.description"
-        [sourceCode]="program.sourceCode"
-        [programmingLanguage]="program.programmingLanguage"
-        [inputTypes]="program.inputTypes"
-        [outputTypes]="program.outputTypes"
-        [user]="program.user"
+        [program]="program"
         [homePage]="true"
-        [programId]="program.programId"
+        (likeClickEvent)="likeProgram($event)"
+        (dislikeClickEvent)="dislikeProgram($event)"
+        (removeClickEvent)="deleteProgram($event)"
       ></app-program-item-list>
     </div>
-    <div>
-      <app-side-profile
-        *ngIf="userData$ | async as currentUser"
-        [currentUser]="currentUser"
-      ></app-side-profile>
-    </div>
+  </div>
+  <div>
+    <app-side-profile
+      *ngIf="userData$ | async as currentUser"
+      [currentUser]="currentUser"
+    ></app-side-profile>
   </div>
 </div>
