--- a/src/app/esgithub/groups/group-list-item/group-list-item.component.html
+++ b/src/app/esgithub/groups/group-list-item/group-list-item.component.html
@@ -16,7 +16,7 @@
         class="flex items-center space-x-1 text-sm left-64 z-10 mt-2 text-white absolute w-3/6 bottom-[30px]"
       >
         <i class="material-icons text-md text-purple-500">group</i>
-        <span class="text-md italic text-purple-500">{{ 0 }}</span>
+        <span class="text-md italic text-purple-500">{{ group.members.length + 1 }}</span>
       </div>
     </div>
   </div>
