--- a/src/app/esgithub/groups/groupe-home/groupe-home.component.html
+++ b/src/app/esgithub/groups/groupe-home/groupe-home.component.html
@@ -3,7 +3,7 @@
     <app-side-navbar></app-side-navbar>
   </div>
   <div class="flex-1 flex flex-col overflow-hidden">
-    <div class="flex flex-col mt-8 w-[90%] relative left-[5%] p-4">
+    <div class="flex flex-col mt-8 w-[90%] relative left-[5%] p-4 h-full">
       <div
         class="relative w-full h-[300px] bg-center bg-cover rounded-lg"
         style="
@@ -17,23 +17,23 @@
           <h1 class="text-white text-4xl font-bold italic">Programs</h1>
         </div>
       </div>
-      <div class="w-full flex flex-row mt-8">
+      <div class="w-full flex flex-row mt-8 h-full overflow-hidden w-full">
         <div
           *ngIf="groupDetails$ | async as group"
-          class="w-full md:w-1/3 lg:w-4/12 h-auto"
+          class="w-full md:w-1/3 lg:w-4/12 h-full overflow-hidden"
         >
           <div
             class="relative rounded-lg shadow-lg p-4 bg-[#3B3D5E] bg-opacity-20 backdrop-blur-md flex flex-col items-center"
           >
             <img
-              [src]="group.imageUrl ? 'http://' + group.imageUrl : anonymousImageUrl"
+              [src]="group.imageUrl ? 'http://' + group.imageUrl : anonymousGroupImage"
               alt="Group Logo"
               class="w-24 h-24 object-cover rounded-full"
             />
             <div class="p-4 text-center">
               <h2 class="text-purple-500 text-3xl italic font-bold">{{ group.name }}</h2>
               <div class="mt-2 text-gray-700">
-                <span class="font-semibold">Owner:</span>
+                <span class="font-semibold text-white italic">Owner:</span>
                 {{ group.owner | userDisplayName }}
               </div>
               <div class="mt-2 flex items-center justify-center">
@@ -41,7 +41,7 @@
                   [src]="
                     group.owner.avatarUrl
                       ? 'http://' + group.owner.avatarUrl
-                      : anonymousImageUrl
+                      : anonymousGroupImage
                   "
                   class="w-6 h-6 rounded-full mr-2"
                   alt="Owner Avatar"
@@ -51,8 +51,13 @@
                   >{{ group.owner.userName }}</span
                 >
               </div>
-              <div class="mt-4 text-gray-600">
-                <span class="font-semibold">Description:</span> {{ group.description }}
+              <div class="mt-2 text-gray-600 overflow-auto h-[80px]">
+                <span class="font-semibold text-white italic">Description:</span>
+                {{ group.description }}
+              </div>
+              <div class="text-gray-600">
+                <span class="font-semibold text-white italic">members:</span>
+                {{ group.members.length + 1 }}
               </div>
             </div>
             <div class="w-full mt-4" *ngIf="isGroupOwner">
@@ -81,6 +86,7 @@
                 <li>
                   <div
                     class="text-red-700 hover:underline cursor-pointer font-bold italic"
+                    (click)="onDeleteGroupClick()"
                   >
                     Delete Group
                   </div>
@@ -89,31 +95,47 @@
             </div>
           </div>
           <div class="w-full" *ngIf="isVisible">
-            <button class="bg-black text-white font-bold py-1 px-4 rounded w-full mt-2">
+            <button
+              class="bg-black text-white font-bold py-1 px-4 rounded w-full mt-2"
+              (click)="onPublishProgramClick()"
+            >
               Publish
             </button>
-            <button class="bg-red-900 text-white font-bold py-1 px-4 rounded w-full mt-2">
+            <button
+              *ngIf="group.visibility === 'private' && !isGroupOwner"
+              class="bg-red-900 text-white font-bold py-1 px-4 rounded w-full mt-2"
+              (click)="onLeaveGroupClick()"
+            >
               Leave Group
             </button>
           </div>
         </div>
-        <div *ngIf="!isVisible" class="h-auto w-9/12 overflow-scroll relative ml-4">
+        <div *ngIf="!isVisible" class="h-full w-9/12 overflow-hidden relative ml-4">
           <div
-            class="p-4 relative rounded-lg shadow-lg p-4 bg-[#3B3D5E] bg-opacity-20 backdrop-blur-md flex flex-col items-center"
+            class="p-4 relative rounded-lg shadow-lg bg-[#3B3D5E] bg-opacity-20 backdrop-blur-md flex flex-col items-center"
           >
-            <div class="p-2 mb-4 text-white text-white font-bold italic text-xl">
-              this is a private group please join to proceed
+            <div class="p-2 mb-4 text-white font-bold italic text-xl">
+              <button>this is a private group please join to proceed</button>
             </div>
             <div
+              (click)="onJoinGroupClick()"
               class="text-purple-500 hover:underline cursor-pointer font-bold italic p-2"
             >
               Join now
             </div>
           </div>
         </div>
-
-        <div *ngIf="isVisible" class="h-auto w-9/12 overflow-scroll relative ml-4">
-          group programs goes here
+        <div *ngIf="isVisible" class="h-full w-full overflow-auto relative ml-8">
+          <div class="w-full">
+            <app-program-item-list
+              *ngFor="let program of (groupDetails$ | async)?.programs"
+              [program]="program"
+              [homePage]="false"
+              (likeClickEvent)="likeProgram($event)"
+              (dislikeClickEvent)="dislikeProgram($event)"
+              class="mb-4"
+            ></app-program-item-list>
+          </div>
         </div>
       </div>
     </div>
