--- a/src/app/esgithub/profile/user-programs/user-programs.component.html
+++ b/src/app/esgithub/profile/user-programs/user-programs.component.html
@@ -1,13 +1,3 @@
 <div *ngFor="let program of programsList$ | async" class="mb-4 w-full">
-  <app-program-item-list
-    [description]="program.description"
-    [sourceCode]="program.sourceCode"
-    [programmingLanguage]="program.programmingLanguage"
-    [inputTypes]="program.inputTypes"
-    [outputTypes]="program.outputTypes"
-    [user]="program.user"
-    [isOwner]="profileOwner"
-    [visibility]="program.visibility"
-    [homePage]="false"
-  ></app-program-item-list>
+  <app-program-item-list [program]="program" [homePage]="false"></app-program-item-list>
 </div>
