--- a/src/app/esgithub/groups/groups.component.html
+++ b/src/app/esgithub/groups/groups.component.html
@@ -52,14 +52,16 @@
         </div>
       </div>
 
-      <div class="left-[5%] flex-col flex mt-10 relative w-[90%] p-4 overflow-hidden">
+      <div
+        class="left-[5%] flex-col flex mt-10 relative w-[90%] p-4 overflow-hidden mb-12"
+      >
         <div class="w-full flex flex-row justify-between mb-6">
           <h1 class="italic text-purple-500 font-bold text-2xl">All Groups</h1>
         </div>
-        <div class="grid grid-cols-3 gap-4">
+        <div class="grid grid-cols-3 gap-3 w-full">
           <ng-container *ngFor="let group of groupsList$ | async">
             <div
-              class="flex-none w-80 h-80 cursor-pointer"
+              class="flex-none w-80 h-80 cursor-pointer mb-4"
               (click)="onGroupClick(group.groupId)"
             >
               <app-group-list-item [group]="group"></app-group-list-item>
