--- a/src/app/core/modals/create-group-modal/create-group-modal.component.html
+++ b/src/app/core/modals/create-group-modal/create-group-modal.component.html
@@ -31,7 +31,7 @@
         formControlName="groupName"
         id="group-name"
         type="text"
-        placeholder="example: php is bouraz 💩"
+        placeholder="example: C++ for beginners"
         class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
       />
     </div>
@@ -43,8 +43,8 @@
       <textarea
         formControlName="description"
         id="description"
-        placeholder="example: only clean code no bouraz here (max 255)"
-        class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
+        placeholder="example: group for clean code devs max(250)"
+        class="w-full px-3 h-[100px] py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
       ></textarea>
     </div>
 
@@ -89,6 +89,7 @@
         Select Group Image
       </button>
     </div>
+    <h1 *ngIf="selectedImage">{{ 'image selected' + selectedImage.name }}</h1>
     <div class="mb-6">
       <button
         type="button"
