adding group visibility

--- a/src/app/esgithub/groups/group-list-item/group-list-item.component.html
+++ b/src/app/esgithub/groups/group-list-item/group-list-item.component.html
@@ -18,6 +18,10 @@
         <i class="material-icons text-md text-purple-500">group</i>
         <span class="text-md italic text-purple-500">{{ group.members.length + 1 }}</span>
       </div>
+      <span
+        class="flex items-center space-x-1 text-sm left-60 z-10 mt-2 absolute w-3/6 bottom-[10px] text-md italic font-bold text-purple-500"
+        >{{ group.visibility }}</span
+      >
     </div>
   </div>
   <div class="custom-shape-divider-bottom-1718737033">
