--- a/src/app/esgithub/home-page/home-page.component.html
+++ b/src/app/esgithub/home-page/home-page.component.html
@@ -5,7 +5,7 @@
 
   <div class="w-full h-[100vh] overflow-hidden bg-[#1E1F3D]">
     <div
-      class="p-4 bg-white opacity-20 shadow-md w-full flex justify-center items-center"
+      class="p-4 bg-white opacity-20 shadow-md rounded-lg flex justify-center items-center mt-4 w-[90%] relative left-[5%]"
     >
       <div class="flex flex-row items-center gap-4">
         <div class="flex items-center gap-2">
